# taxpr

./: .gitignore  .pre-commit-config.yml  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  publish.yml  release.yml  run_tests.yml
docs/: guide.md  index.md  reference.md
docs/examples/: constraint_tracking.md  find_tags.md  state_management.md
src/taxpr/: __init__.py  dfg.py  primitives.py  tag.py  util.py
src/taxpr.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_guide_examples.py  test_partition_out.py  test_primitives.py  test_tag.py
