[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "taxpr"
version = "0.0.1"
authors = [
  { name="Oscar Toomey" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["jax>=0.8.0", "jaxtyping>=0.2.20"]

[project.urls]
Homepage = "https://github.com/otoomey/taxpr"
Issues = "https://github.com/otoomey/taxpr/issues"